updated people's page

--- a/people.html
+++ b/people.html
@@ -58,7 +58,7 @@
                 <div class="team-grid">
                     <article class="team-card">
                         <div class="team-card-image">
-                            <img src="images/ben-rubin.jpeg" alt="Ben Rubin, Ph.D.">
+                            <img src="images/people/ben-rubin.jpeg" alt="Ben Rubin, Ph.D.">
                         </div>
                         <h3 class="team-card-name">Ben Rubin, Ph.D.</h3>
                         <p class="team-card-role"><a href="mailto:brubin@berkeley.edu">brubin@berkeley.edu</a></p>
@@ -75,7 +75,7 @@
                 <div class="team-grid">
                     <article class="team-card">
                         <div class="team-card-image">
-                            <div class="team-card-placeholder"></div>
+                            <img src="images/people/jon-martinson.jpg" alt="Jon Martinson, Ph.D.">
                         </div>
                         <h3 class="team-card-name">Jon Martinson, Ph.D.</h3>
                         <p class="team-card-role"><a href="mailto:jmartinson@berkeley.edu">jmartinson@berkeley.edu</a></p>
@@ -86,7 +86,7 @@
 
                     <article class="team-card">
                         <div class="team-card-image">
-                            <div class="team-card-placeholder"></div>
+                            <img src="images/people/lindsey-pieper.jpg" alt="Lindsey Pieper, Ph.D.">
                         </div>
                         <h3 class="team-card-name">Lindsey Pieper, Ph.D.</h3>
                         <p class="team-card-role"><a href="mailto:lindsey.pieper@berkeley.edu">lindsey.pieper@berkeley.edu</a></p>
@@ -97,7 +97,7 @@
 
                     <article class="team-card">
                         <div class="team-card-image">
-                            <div class="team-card-placeholder"></div>
+                            <img src="images/people/bingliang-xie.jpg" alt="Bingliang Xie, Ph.D.">
                         </div>
                         <h3 class="team-card-name">Bingliang Xie, Ph.D.</h3>
                         <p class="team-card-role">Joint with Ronda Lab | <a href="mailto:bingliangxie@berkeley.edu">bingliangxie@berkeley.edu</a></p>
@@ -108,7 +108,7 @@
 
                     <article class="team-card">
                         <div class="team-card-image">
-                            <div class="team-card-placeholder"></div>
+                            <img src="images/people/kuang-hu.png" alt="Kuang Hu, Ph.D.">
                         </div>
                         <h3 class="team-card-name">Kuang Hu, Ph.D.</h3>
                         <p class="team-card-role"><a href="mailto:kh36969@berkeley.edu">kh36969@berkeley.edu</a></p>
@@ -119,7 +119,7 @@
 
                     <article class="team-card">
                         <div class="team-card-image">
-                            <div class="team-card-placeholder"></div>
+                            <img src="images/people/madeline-hayes.png" alt="Madeline Hayes, Ph.D.">
                         </div>
                         <h3 class="team-card-name">Madeline Hayes, Ph.D.</h3>
                         <p class="team-card-role">Joint with Cress Lab &amp; O'Malley Lab | <a href="mailto:mmhayes@berkeley.edu">mmhayes@berkeley.edu</a></p>
@@ -136,7 +136,7 @@
                 <div class="team-grid">
                     <article class="team-card">
                         <div class="team-card-image">
-                            <div class="team-card-placeholder"></div>
+                            <img src="images/people/leo-song.jpg" alt="Leo Song">
                         </div>
                         <h3 class="team-card-name">Leo Song</h3>
                         <p class="team-card-role"><a href="mailto:leosong@berkeley.edu">leosong@berkeley.edu</a></p>
@@ -153,7 +153,7 @@
                 <div class="team-grid">
                     <article class="team-card">
                         <div class="team-card-image">
-                            <div class="team-card-placeholder"></div>
+                            <img src="images/people/sarah-hasham.jpg" alt="Sarah Hasham">
                         </div>
                         <h3 class="team-card-name">Sarah Hasham</h3>
                         <p class="team-card-role">Lab Manager | <a href="mailto:sarah.hasham@berkeley.edu">sarah.hasham@berkeley.edu</a></p>
@@ -164,7 +164,7 @@
 
                     <article class="team-card">
                         <div class="team-card-image">
-                            <div class="team-card-placeholder"></div>
+                            <img src="images/people/jigyasa-arora.jpg" alt="Jigyasa Arora, Ph.D.">
                         </div>
                         <h3 class="team-card-name">Jigyasa Arora, Ph.D.</h3>
                         <p class="team-card-role">Staff Scientist | <a href="mailto:jarora@berkeley.edu">jarora@berkeley.edu</a></p>
@@ -175,7 +175,7 @@
 
                     <article class="team-card">
                         <div class="team-card-image">
-                            <div class="team-card-placeholder"></div>
+                            <img src="images/people/jamie-irvine.jpg" alt="Jamie Irvine">
                         </div>
                         <h3 class="team-card-name">Jamie Irvine</h3>
                         <p class="team-card-role">AI Advisor | <a href="mailto:jamieirvine@berkeley.edu">jamieirvine@berkeley.edu</a></p>
@@ -186,7 +186,7 @@
 
                     <article class="team-card">
                         <div class="team-card-image">
-                            <div class="team-card-placeholder"></div>
+                            <img src="images/people/audrey-glynn.jpg" alt="Audrey Glynn">
                         </div>
                         <h3 class="team-card-name">Audrey Glynn, Ph.D.</h3>
                         <p class="team-card-role">Senior Program Manager | <a href="mailto:audrey.glynn@berkeley.edu">audrey.glynn@berkeley.edu</a></p>
@@ -197,7 +197,7 @@
 
                     <article class="team-card">
                         <div class="team-card-image">
-                            <div class="team-card-placeholder"></div>
+                            <img src="images/people/rachel-evans.jpg" alt="Rachel K. Evans, D.Mus.">
                         </div>
                         <h3 class="team-card-name">Rachel K. Evans, D.Mus.</h3>
                         <p class="team-card-role">Executive Administrative Officer | <a href="mailto:rachelkevans@berkeley.edu">rachelkevans@berkeley.edu</a></p>
@@ -214,7 +214,7 @@
                 <div class="team-grid">
                     <article class="team-card">
                         <div class="team-card-image">
-                            <div class="team-card-placeholder"></div>
+                            <img src="images/people/abby-wang.png" alt="Abby Wang">
                         </div>
                         <h3 class="team-card-name">Abby Wang</h3>
                         <p class="team-card-role">Undergraduate Researcher &amp; Graphic Designer | <a href="mailto:abbywang@berkeley.edu">abbywang@berkeley.edu</a></p>
@@ -225,7 +225,7 @@
 
                     <article class="team-card">
                         <div class="team-card-image">
-                            <div class="team-card-placeholder"></div>
+                            <img src="images/people/danh-tran.jpg" alt="Danh Tran">
                         </div>
                         <h3 class="team-card-name">Danh Tran</h3>
                         <p class="team-card-role">Undergraduate Researcher | <a href="mailto:danht@berkeley.edu">danht@berkeley.edu</a></p>
@@ -236,7 +236,7 @@
 
                     <article class="team-card">
                         <div class="team-card-image">
-                            <div class="team-card-placeholder"></div>
+                            <img src="images/people/aria-kim.JPG" alt="Aria Kim">
                         </div>
                         <h3 class="team-card-name">Aria Kim</h3>
                         <p class="team-card-role">Undergraduate Researcher | <a href="mailto:ariakim@berkeley.edu">ariakim@berkeley.edu</a></p>
@@ -247,7 +247,7 @@
 
                     <article class="team-card">
                         <div class="team-card-image">
-                            <div class="team-card-placeholder"></div>
+                            <img src="images/people/varsha-sivanath.jpg" alt="Varsha Sivanath">
                         </div>
                         <h3 class="team-card-name">Varsha Sivanath</h3>
                         <p class="team-card-role">Undergraduate Researcher | <a href="mailto:vsiv@berkeley.edu">vsiv@berkeley.edu</a></p>
@@ -258,12 +258,23 @@
 
                     <article class="team-card">
                         <div class="team-card-image">
-                            <div class="team-card-placeholder"></div>
+                            <img src="images/people/hengyi_yang.jpg" alt="Hengyi Yang">
                         </div>
                         <h3 class="team-card-name">Hengyi Yang</h3>
                         <p class="team-card-role">Undergraduate Researcher | <a href="mailto:hengyi1116@berkeley.edu">hengyi1116@berkeley.edu</a></p>
                         <p class="team-card-bio">
                             Hengyi is an undergraduate student majoring in Microbial Biology and Nutritional Science, with interests in microbiology, immunology, and nutrition. In the Lab, she is mentored by Kuang and works on searching for novel RNA-guided editors. Outside the lab, Hengyi enjoys dancing, aerobics, and long-distance running.
+                        </p>
+                    </article>
+
+                    <article class="team-card">
+                        <div class="team-card-image">
+                            <img src="images/people/isabel_navarro.JPG" alt="Isabel Navarro">
+                        </div>
+                        <h3 class="team-card-name">Isabel Navarro</h3>
+                        <p class="team-card-role">Assistant Lab Manager | <a href="mailto:inavarro@berkeley.edu">inavarro@berkeley.edu</a></p>
+                        <p class="team-card-bio">
+                            Isabel is a fourth year undergraduate student studying Molecular Environmental Biology. During her time at UC Berkeley, Isabel has studied plant-pollinator ecology at the Urban Bee Lab and the pathogen community (RNA virus) of CA native bees at the Boots Lab. In the Rubin Lab, she is mentored by Sarah and looks forward to supporting the lab members in their projects. In her free time, she loves exploring nature of the Bay Area as the president of the Wildlife Society @ Berkeley.
                         </p>
                     </article>
                 </div>
